force-app/main/default/objects/E2CP__Widespread_Issue_Solution__c/E2CP__Widespread_Issue_Solution__c.object-meta.xml
<CustomObject>
    <description>Suggested or accepted solution to a Widespread Issue.</description>
    <label>Widespread Issue Solution</label>
    <nameField>
        <displayFormat>WSIS-{00000000}</displayFormat>
        <label>Solution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widespread Issue Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>