force-app/main/default/objects/E2CP__Widespread_Issue_Solution__c/fields/E2CP__Best_Solution__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Best_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator of Solution being selected as best</description>
    <inlineHelpText>Indicator of Solution being selected as best</inlineHelpText>
    <label>Best Solution</label>
    <type>Checkbox</type>
</CustomField>