force-app/main/default/objects/E2CP__Widespread_Issue_Solution__c/fields/E2CP__Description__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Description__c</fullName>
    <description>Description of the Solution</description>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>