force-app/main/default/objects/E2CP__Widespread_Issue_Solution__c/fields/E2CP__Widespread_Issue__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Widespread_Issue__c</fullName>
    <description>Widespread Issue number related to the Solution</description>
    <inlineHelpText>Widespread Issue number related to the Solution</inlineHelpText>
    <label>Widespread Issue</label>
    <referenceTo>E2CP__Widespread_Issue__c</referenceTo>
    <relationshipLabel>Widespread Issue Solutions</relationshipLabel>
    <relationshipName>Solutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>